test/cases/errors/load-module-error/errors.js
module.exports = [
	[
		/err: abc/,
	],
	[
		/The loaded module contains errors/,
	],
];
